# passgraph

./: LICENSE  README.md  meson.build
.github/workflows/: ci.yml
examples/basic/: main.cpp  meson.build
examples/basic/shaders/: basic.vert
examples/common/: vk_common.hpp
src/: buffer_descriptor.hpp  buffer_layout.hpp  context.cpp  context.hpp  context.tpp  graph.cpp  graph.hpp  image_descriptor.hpp  pass.cpp  pass.hpp  pass_builder.cpp  pass_builder.hpp  pass_graph.cpp  pass_graph.hpp  passgraph.cpp  passgraph.hpp
src/types/: buffer_descriptor.hpp  buffer_layout.hpp  buffer_resource.hpp  image_resource.hpp  pass.hpp  resource.hpp
src/util/: flat_hash_map.hpp  lru_cache.hpp
tests/: test_framework.cpp  test_passgraph.cpp
